# ChangeLog for dev-java/javatoolkit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.62 2011/03/24 18:54:57 xarthisius Exp $

  24 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  javatoolkit-0.3.0-r6.ebuild:
  ppc/ppc64 stable wrt #356673

  17 Mar 2011; Thomas Kahle <tomka@gentoo.org> javatoolkit-0.3.0-r6.ebuild:
  x86 stable per bug 356673

  11 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  javatoolkit-0.3.0-r6.ebuild:
  Stable on amd64 wrt bug #356673

*javatoolkit-0.3.0-r6 (13 Feb 2011)

  13 Feb 2011; Vlastimil Babka <caster@gentoo.org>
  -javatoolkit-0.3.0-r5.ebuild, +javatoolkit-0.3.0-r6.ebuild,
  +files/javatoolkit-0.3.0-no-pyxml.patch:
  Patch to remove usage of pyxml, bug #354421, thanks to Rafał Mużyło
  <galtgendo@o2.pl>.

*javatoolkit-0.3.0-r5 (08 Feb 2011)

  08 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +javatoolkit-0.3.0-r5.ebuild:
  Fix dependencies (bug #236377).

  05 Nov 2010; Mark Loeser <halcy0n@gentoo.org> javatoolkit-0.3.0-r4.ebuild:
  Stable for ppc64; bug #319811

  14 Oct 2010; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r4.ebuild:
  stable ppc, bug 319811

  19 Jun 2010; Raúl Porcel <armin76@gentoo.org>
  javatoolkit-0.3.0-r4.ebuild:
  ia64/sparc stable wrt #319811

  21 May 2010; Kenneth Prugh <ken69267@gentoo.org>
  javatoolkit-0.3.0-r4.ebuild:
  amd64 stable, bug #319811

  21 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  javatoolkit-0.3.0-r4.ebuild:
  x86 stable wrt bug #319811

*javatoolkit-0.3.0-r4 (15 Apr 2010)

  15 Apr 2010; Vlastimil Babka <caster@gentoo.org>
  -javatoolkit-0.3.0-r2.ebuild, +javatoolkit-0.3.0-r4.ebuild:
  Python improvements including multiple ABI support thanks to arfrever, bug
  #312149.

  04 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  javatoolkit-0.3.0-r2.ebuild, javatoolkit-0.3.0-r3.ebuild: