@@ -5,13 +5,13 @@ AUX 0.3.0-prefix.patch 1747 RMD160 8006bdcfbec78acafc7b591472f4ab2bf4165635 SHA1
 AUX javatoolkit-0.3.0-no-pyxml.patch 1128 RMD160 33b65b49bdc9a238358fac4d3db8aa2d04eaf4bb SHA1 62e4a6b029da3d2b9466de8585ecc17e10aa036c SHA256 9f0e285c15a1a477606c61fabc391a8f56656525c7d92f91ae59e289eee7d8a9
 AUX javatoolkit-0.3.0-python2.6.patch 413 RMD160 3f881cc51eb9d5358ea14ec6e70b952bb7c15639 SHA1 7f2961e0c6c0ca1fb855a951d05e41eba2e51b50 SHA256 4128e060d2c3693717c64e443527380f548d663496bb982fe45463e6370d920d
 DIST javatoolkit-0.3.0.tar.bz2 16823 RMD160 14638e42599a469b3fb878a45dac2de69f6c6280 SHA1 6be5b4583920e9122cd1f295174b4deca0b853a9 SHA256 47bf8aad2ec58b2d850e8cbe57fe2707859d800b215b24387c7652a50353677c
-EBUILD javatoolkit-0.3.0-r6.ebuild 1145 RMD160 a0e73b956ed6e831fdb6d8919ffac376e0a1b151 SHA1 14d5d64aa615b59877e80d6bd32be887a9b5004f SHA256 055866107b6ce3df53d5152e4091d6dcfea1134967b0126b5c50d4816e6346b7
-MISC ChangeLog 8863 RMD160 8e3f03ad3d9cecca5ed06676368da5cf98d63e47 SHA1 b58cec1a38e8cdded2cfe66601372b7d9594eea9 SHA256 7ff8b1dc178e818bfbe445ee609a0988497a9d82f596f74bab118a26deae86ba
+EBUILD javatoolkit-0.3.0-r6.ebuild 1152 RMD160 cf2a392af7e2050e9e73e7fcdb4844d54a9cf2ea SHA1 391df4fb96e667a1461430b188dbb1456e1290ee SHA256 c7a04acd0d0c1213d2072a2430e2c9ce8791e55dabcae6d74a935cb2505407cd
+MISC ChangeLog 9097 RMD160 7b64afb1fca756c78a79a7e1bb7d5d6ff5993c6f SHA1 b9a367f142fa3395a9be61f95108c7da87a100b1 SHA256 7189c03706bc3face2c1556f95e6679be7ddea420ff33bb4fa10f46cd0a7608d
 MISC metadata.xml 159 RMD160 8da0afd0f687b8985b7f0432fec737950271e354 SHA1 1d089c3afbfafd09e371d7806cc0c72a5c76e5a1 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk3ATu0ACgkQX3X2B8XHTom1IQCeO144MNMt+oj+zXxg9Fo3mCV9
-cTcAnR8vCxkHyKmQGrQewJJAnPp/Okx1
-=XfkF
+iEYEARECAAYFAk+2ihIACgkQX3X2B8XHTomlOgCggka6KVXbs7IV3XCU2g7ZN1a6
+y5MAn08YYe6GFWhWSf3GeeMKEt3h2aJW
+=ZtuM
 -----END PGP SIGNATURE-----
