@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/javatoolkit
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.62 2011/03/24 18:54:57 xarthisius Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.66 2012/05/12 03:11:09 aballier Exp $
+
+  12 May 2012; Alexis Ballier <aballier@gentoo.org>
+  javatoolkit-0.3.0-r6.ebuild:
+  keyword ~amd64-fbsd
+
+  05 Feb 2012; Mike Gilbert <floppym@gentoo.org> javatoolkit-0.3.0-r4.ebuild,
+  javatoolkit-0.3.0-r6.ebuild:
+  Inherit multilib.
 
   24 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
   javatoolkit-0.3.0-r6.ebuild:
